--- a/table/3.html
+++ b/table/3.html
@@ -57,10 +57,10 @@
                         elem: '#single',
                         toolbar:'true'
                         ,cols: [[ //标题栏
-                          {field: 'id', title: '排名', width: 300, sort: true}
-                          ,{field: 'username', title: '姓名', width: 300}
-                          ,{field: 'time', title: '时间', minWidth: 300}
-                          ,{title: '操作', width:170, toolbar:'#ListBar',fixed:"right",align:"center"}
+                          {field: 'id', title: '排名',  sort: true}
+                          ,{field: 'username', title: '姓名'}
+                          ,{field: 'time', title: '时间'}
+                          ,{title: '操作',  toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                         ,data: [{
                           "id": "1"
@@ -359,10 +359,10 @@
                         
                         title:"三阶速拧平均"
                         ,cols: [[ //标题栏
-                        {field: 'id', title: '排名', width: 300, sort: true}
-                          ,{field: 'username', title: '姓名', width: 300}
-                          ,{field: 'time', title: '时间', minWidth: 300}
-                          ,{title: '操作', width:170, toolbar:'#ListBar',fixed:"right",align:"center"}
+                        {field: 'id', title: '排名',  sort: true}
+                          ,{field: 'username', title: '姓名'}
+                          ,{field: 'time', title: '时间'}
+                          ,{title: '操作', toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                        , data: [{
                           "id": "1"
