--- a/table/4.html
+++ b/table/4.html
@@ -59,67 +59,65 @@
                         ,cols: [[ //标题栏
                           {field: 'id', title: '排名', sort: true}
                           ,{field: 'username', title: '姓名'}
-                          ,{field: 'time', title: '时间'}
+                          ,{field: 'single', title: '时间'}
                           ,{title: '操作',  toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                         ,data: [{
-                          "id": "1"
-                          ,"username": "罗绿翔"
-                          ,"time": "35.37"
+                          "username": "罗绿翔"
+                          ,"single": 35.37
+                          ,"avg": 42.45
                           ,"wcaid": "2018LUOL03"
                         }, {
-                          "id": "2"
-                          ,"username": "杨宇煌"
-                          ,"time": "35.42"
+                          "username": "杨宇煌"
+                          ,"single": 35.42
+                          ,"avg": 39.39
                           ,"wcaid": "2017YANG16"
-                        }, {"id": "3"
-                          ,"username": "罗益浩"
-                          ,"time": "45.91"
+                        }, {"username": "罗益浩"
+                          ,"single": 45.91
+                          ,"avg": 51.83
                           ,"wcaid": "2017LUOY03"
                         }, {
-                          "id": "4"
-                          ,"username": "余雷"
-                          ,"time": "47.60"
+                          "username": "余雷"
+                          ,"single": 47.60
+                          ,"avg": 53.53
                           ,"wcaid": "2015YULE01"},{
-                          "id": "5"
-                          ,"username": "钟凯文"
-                          ,"time": "48.80"
+                          "username": "钟凯文"
+                          ,"single": 48.80
+                          ,"avg": 53.47
                           ,"wcaid": "2015ZHON03"
                         }, {
-                          "id": "6"
-                          ,"username": "魏庆伟"
-                          ,"time": "53.33"
+                          "username": "魏庆伟"
+                          ,"single": 53.33
+                          ,"avg": 60.89
                           ,"wcaid": "2018WEIQ01"
-                        }, {"id": "7"
-                          ,"username": "黄伟燊"
-                          ,"time": "56.72"
+                        }, {"username": "黄伟燊"
+                          ,"single": 56.72
+                          ,"avg": 64.51
                           ,"wcaid": "2018HUAN70"
                         }, {
-                          "id": "8"
-                          ,"username": "彭伟聪"
-                          ,"time": "57.66"
+                          "username": "彭伟聪"
+                          ,"single": 57.66
+                          ,"avg": 66.67
                           ,"wcaid": "2015PENG05"},{
-                          "id": "9"
-                          ,"username": "罗崇"
-                          ,"time": "58.94"
+                          "username": "罗崇"
+                          ,"single": 58.94
+                          ,"avg": 66.49
                           ,"wcaid": "2018LUOC05"
                         }, {
-                          "id": "10"
-                          ,"username": "操源"
-                          ,"time": "59.27"
+                          "username": "操源"
+                          ,"single": 59.27
+                          ,"avg": 76.15
                           ,"wcaid": "2016CAOY01"
-                        }, {"id": "11"
-                          ,"username": "(魏桂兴"
-                          ,"time": "1:20.04"
+                        }, {"username": "魏桂兴"
+                          ,"single": 80.04
                           ,"wcaid": "2019WEIG01"
                         }, {
-                          "id": "12"
-                          ,"username": "蔡彦"
-                          ,"time": "1:38.08"
+                          "username": "蔡彦"
+                          ,"single": 98.08
+                          ,"avg": 111.52
                           ,"wcaid": "2009CAIY02"},{
-                          "id": "13"
-                          ,"username": "罗佳辉"
-                          ,"time": "1:58.50"
+                          "username": "罗佳辉"
+                          ,"single": 118.50
                           ,"wcaid": "2017LUOJ03"
                         }, 
                         ]
@@ -175,63 +173,63 @@
                         ,cols: [[ //标题栏
                         {field: 'id', title: '排名', sort: true}
                           ,{field: 'username', title: '姓名'}
-                          ,{field: 'time', title: '时间'}
+                          ,{field: 'avg', title: '时间'}
                           ,{title: '操作',  toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                        , data: [{
                           "id": "1"
                           ,"username": "杨宇煌"
-                          ,"time": "39.39"
+                          ,"avg": "39.39"
                           ,"wcaid": "2017YANG16"
                         },{
                           "id": "2"
                           ,"username": "罗绿翔"
-                          ,"time": "42.45"
+                          ,"avg": "42.45"
                           ,"wcaid": "2018LUOL03"
                         },{
                           "id": "3"
                           ,"username": "罗益浩"
-                          ,"time": "51.83"
+                          ,"avg": "51.83"
                           ,"wcaid": "2017LUOY03"
                         },{
                           "id": "4"
                           ,"username": "钟凯文"
-                          ,"time": "53.47"
+                          ,"avg": "53.47"
                           ,"wcaid": "2015ZHON03"
                         },{
                           "id": "5"
                           ,"username": "余雷"
-                          ,"time": "53.53"
+                          ,"avg": "53.53"
                           ,"wcaid": "2015YULE01"
                         },{
                           "id": "6"
                           ,"username": "魏庆伟"
-                          ,"time": "1:00.89"
+                          ,"avg": "1:00.89"
                           ,"wcaid": "2018WEIQ01"
                         },{
                           "id": "7"
                           ,"username": "黄伟燊"
-                          ,"time": "1:04.51"
+                          ,"avg": "1:04.51"
                           ,"wcaid": "2018HUAN70"
                         },{
                           "id": "8"
                           ,"username": "罗崇"
-                          ,"time": "1:06.49"
+                          ,"avg": "1:06.49"
                           ,"wcaid": "2018LUOC05"
                         },{
                           "id": "9"
                           ,"username": "彭伟聪"
-                          ,"time": "1:06.67"
+                          ,"avg": "1:06.67"
                           ,"wcaid": "2015PENG05"
                         },{
                           "id": "10"
                           ,"username": "操源"
-                          ,"time": "1:16.15"
+                          ,"avg": "1:16.15"
                           ,"wcaid": "2016CAOY01"
                         },{
                           "id": "11"
                           ,"username": "蔡彦"
-                          ,"time": "1:51.52"
+                          ,"avg": "1:51.52"
                           ,"wcaid": "2009CAIY02"
                         },
                          ]
