--- a/table/5.html
+++ b/table/5.html
@@ -59,36 +59,33 @@
                         ,cols: [[ //标题栏
                           {field: 'id', title: '排名', sort: true}
                           ,{field: 'username', title: '姓名'}
-                          ,{field: 'time', title: '时间'}
+                          ,{field: 'single', title: '时间'}
                           ,{title: '操作',  toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                         ,data: [{
-                          "id": "1"
-                          ,"username": "罗绿翔"
-                          ,"time": "1:24.66"
+                         "username": "罗绿翔"
+                          ,"single": 84.66
+                          ,"avg": 91.49
                           ,"wcaid": "2018LUOL03"
                         }, {
-                          "id": "2"
-                          ,"username": "黄回君"
-                          ,"time": "1:27.28"
+                          "username": "黄回君"
+                          ,"single": 87.28
+                          ,"avg": 96.82
                           ,"wcaid": "2015HUAN39"
-                        }, {"id": "3"
-                          ,"username": "杨宇煌"
-                          ,"time": "1:27.63"
+                        }, {"username": "杨宇煌"
+                          ,"single": 87.63
+                          ,"avg": 91.23
                           ,"wcaid": "2017YANG16"
                         }, {
-                          "id": "4"
-                          ,"username": "操源"
-                          ,"time": "2:20.57"
+                          "username": "操源"
+                          ,"single": 140.57
                           ,"wcaid": "2016CAOY01"},{
-                          "id": "5"
-                          ,"username": "彭伟聪"
-                          ,"time": "2:45.88"
+                          "username": "彭伟聪"
+                          ,"single": 165.88
                           ,"wcaid": "2015PENG05"
                         }, {
-                          "id": "6"
-                          ,"username": "蔡彦"
-                          ,"time": "3:18.58"
+                          "username": "蔡彦"
+                          ,"single": 198.58
                           ,"wcaid": "2009CAIY02"
                         }, 
                         ]
@@ -144,23 +141,23 @@
                         ,cols: [[ //标题栏
                         {field: 'id', title: '排名', width: 300, sort: true}
                           ,{field: 'username', title: '姓名', width: 300}
-                          ,{field: 'time', title: '时间', minWidth: 300}
+                          ,{field: 'avg', title: '时间', minWidth: 300}
                           ,{title: '操作', width:170, toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                        , data: [{
                           "id": "1"
                           ,"username": "杨宇煌"
-                          ,"time": "1:31.23"
+                          ,"avg": "1:31.23"
                           ,"wcaid": "2017YANG16"
                         },{
                           "id": "2"
                           ,"username": "罗绿翔"
-                          ,"time": "1:31.49"
+                          ,"avg": "1:31.49"
                           ,"wcaid": "2018LUOL03"
                         },{
                           "id": "3"
                           ,"username": "黄回君"
-                          ,"time": "1:36.82"
+                          ,"avg": "1:36.82"
                           ,"wcaid": "2015HUAN39"
                         },
                          ]
