--- a/table/SQ1.html
+++ b/table/SQ1.html
@@ -63,9 +63,9 @@
                           ,{title: '操作', toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                         ,data: [{
-                          "id": "1"
-                          ,"username": "蔡彦"
-                          ,"time": "21.19"
+                          "username": "蔡彦"
+                          ,"single": 21.19
+                          ,"avg": 27.58
                           ,"wcaid": "2009CAIY02"
                         }, 
                         ]
