--- a/table/clock.html
+++ b/table/clock.html
@@ -63,9 +63,9 @@
                           ,{title: '操作',  toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                         ,data: [{
-                          "id": "1"
-                          ,"username": "罗益浩"
-                          ,"time": "22.74"
+                          "username": "罗益浩"
+                          ,"single": 22.74
+                          ,"avg": 24.56
                           ,"wcaid": "2017LUOY03"
                         }, 
                         ]
