--- a/table/mega.html
+++ b/table/mega.html
@@ -63,14 +63,14 @@
                           ,{title: '操作', toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                         ,data: [{
-                          "id": "1"
-                          ,"username": "钟凯文"
-                          ,"time": "1:09.61"
+                          "username": "钟凯文"
+                          ,"single": 69.61
+                          ,"avg": 76.35
                           ,"wcaid": "2015ZHON03"
                         }, {
-                          "id": "2"
-                          ,"username": "胡宇韬"
-                          ,"time": "1:16.83"
+                          "username": "胡宇韬"
+                          ,"single": 76.83
+                          ,"avg": 95.96
                           ,"wcaid": "2018HUYU04"
                         }, 
                         ]
