--- a/table/py.html
+++ b/table/py.html
@@ -59,63 +59,63 @@
                         ,cols: [[ //标题栏
                           {field: 'id', title: '排名',  sort: true}
                           ,{field: 'username', title: '姓名'}
-                          ,{field: 'time', title: '时间'}
+                          ,{field: 'single', title: '时间'}
                           ,{title: '操作',  toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                         ,data: [{
-                          "id": "1"
-                          ,"username": "王华斌"
-                          ,"time": "3.39"
+                          "username": "王华斌"
+                          ,"single": 3.39
+                          ,"avg": 7.31
                           ,"wcaid": "2016WANH14"
                         }, {
-                          "id": "2"
-                          ,"username": "余雷"
-                          ,"time": "5.24"
+                          "username": "余雷"
+                          ,"single": 5.24
+                          ,"avg": 8.78
                           ,"wcaid": "2015YULE01"
-                        }, {"id": "3"
-                          ,"username": "王祉晗"
-                          ,"time": "5.46"
+                        }, {"username": "王祉晗"
+                          ,"single": 5.46
+                          ,"avg": 7.58
                           ,"wcaid": "2018WANZ26"
                         }, {
-                          "id": "4"
-                          ,"username": "杨宇煌"
-                          ,"time": "7.44"
+                          "username": "杨宇煌"
+                          ,"single": 7.44
+                          ,"avg": 10.02
                           ,"wcaid": "2017YANG16"},{
-                          "id": "5"
-                          ,"username": "温正烨"
-                          ,"time": "7.79"
+                         "username": "温正烨"
+                          ,"single": 7.79
+                          ,"avg": 13.54
                           ,"wcaid": "2019WENZ02"
                         }, {
-                          "id": "6"
-                          ,"username": "钟凯文"
-                          ,"time": "8.42"
+                          "username": "钟凯文"
+                          ,"single": 8.42
+                          ,"avg": 12.39
                           ,"wcaid": "2015ZHON03"
-                        }, {"id": "7"
-                          ,"username": "魏庆伟"
-                          ,"time": "9.38"
+                        }, {"username": "魏庆伟"
+                          ,"single": 9.38
+                          ,"avg": 13.31
                           ,"wcaid": "2018WEIQ01"
                         }, {
-                          "id": "8"
-                          ,"username": "操源"
-                          ,"time": "11.83"
+                          "username": "操源"
+                          ,"single": 11.83
+                          ,"avg": 13.40
                           ,"wcaid": "2016CAOY01"},{
-                          "id": "9"
-                          ,"username": "胡宇韬"
-                          ,"time": "12.14"
+                          "username": "胡宇韬"
+                          ,"single": 12.14
+                          ,"avg": 15.30
                           ,"wcaid": "2018HUYU04"
                         }, {
-                          "id": "10"
-                          ,"username": "罗益浩"
-                          ,"time": "12.53"
+                          "username": "罗益浩"
+                          ,"single": 12.53
+                          ,"avg": 17.88
                           ,"wcaid": "2017LUOY03"
-                        }, {"id": "11"
-                          ,"username": "赖沁"
-                          ,"time": "13.09"
+                        }, {"username": "赖沁"
+                          ,"single": 13.09
+                          ,"avg": 16.08
                           ,"wcaid": "2018LAIQ01"
                         }, {
-                          "id": "12"
-                          ,"username": "杨白雪"
-                          ,"time": "20.45"
+                          "username": "杨白雪"
+                          ,"single": 20.45
+                          ,"avg": 25.83
                           ,"wcaid": "2018YANB01"},
                         ]
                         //,skin: 'line' //表格风格
@@ -170,63 +170,63 @@
                         ,cols: [[ //标题栏
                         {field: 'id', title: '排名', sort: true}
                           ,{field: 'username', title: '姓名'}
-                          ,{field: 'time', title: '时间'}
+                          ,{field: 'avg', title: '时间'}
                           ,{title: '操作',  toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                        , data: [{
                           "id": "1"
                           ,"username": "王华斌"
-                          ,"time": "7.31"
+                          ,"avg": "7.31"
                           ,"wcaid": "2016WANH14"
                         }, {"id": "2"
                           ,"username": "王祉晗"
-                          ,"time": "7.58"
+                          ,"avg": "7.58"
                           ,"wcaid": "2018WANZ26"
                         },{
                           "id": "3"
                           ,"username": "余雷"
-                          ,"time": "8.78"
+                          ,"avg": "8.78"
                           ,"wcaid": "2015YULE01"
                         },  {
                           "id": "4"
                           ,"username": "杨宇煌"
-                          ,"time": "10.02"
+                          ,"avg": "10.02"
                           ,"wcaid": "2017YANG16"}, {
                           "id": "5"
                           ,"username": "钟凯文"
-                          ,"time": "12.39"
+                          ,"avg": "12.39"
                           ,"wcaid": "2015ZHON03"
                         }, {"id": "6"
                           ,"username": "魏庆伟"
-                          ,"time": "13.31"
+                          ,"avg": "13.31"
                           ,"wcaid": "2018WEIQ01"
                         }, {
                           "id": "7"
                           ,"username": "操源"
-                          ,"time": "13.40"
+                          ,"avg": "13.40"
                           ,"wcaid": "2016CAOY01"},{
                           "id": "8"
                           ,"username": "温正烨"
-                          ,"time": "13.54"
+                          ,"avg": "13.54"
                           ,"wcaid": "2019WENZ02"
                         },{
                           "id": "9"
                           ,"username": "胡宇韬"
-                          ,"time": "15.30"
+                          ,"avg": "15.30"
                           ,"wcaid": "2018HUYU04"
                         }, {"id": "10"
                           ,"username": "赖沁"
-                          ,"time": "16.08"
+                          ,"avg": "16.08"
                           ,"wcaid": "2018LAIQ01"
                         }, {
                           "id": "11"
                           ,"username": "罗益浩"
-                          ,"time": "17.88"
+                          ,"avg": "17.88"
                           ,"wcaid": "2017LUOY03"
                         }, {
                           "id": "12"
                           ,"username": "杨白雪"
-                          ,"time": "25.83"
+                          ,"avg": "25.83"
                           ,"wcaid": "2018YANB01"},]
                         //,skin: 'line' //表格风格
                         ,even: true
