--- a/table/sk.html
+++ b/table/sk.html
@@ -59,54 +59,53 @@
                         ,cols: [[ //标题栏
                           {field: 'id', title: '排名',  sort: true}
                           ,{field: 'username', title: '姓名'}
-                          ,{field: 'time', title: '时间'}
+                          ,{field: 'single', title: '时间'}
                           ,{title: '操作',  toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                         ,data: [{
-                          "id": "1"
-                          ,"username": "杨宇煌"
-                          ,"time": "3.10"
+                         "username": "杨宇煌"
+                          ,"single": 3.10
+                          ,"avg": 5.01
                           ,"wcaid": "2017YANG16"
                         }, {
-                          "id": "2"
-                          ,"username": "余雷"
-                          ,"time": "5.23"
+                          "username": "余雷"
+                          ,"single": 5.23
+                          ,"avg": 7.74
                           ,"wcaid": "2015YULE01"
-                        }, {"id": "3"
-                          ,"username": "李宇威"
-                          ,"time": "7.93"
+                        }, {"username": "李宇威"
+                          ,"single": 7.93
+                          ,"avg": 13.05
                           ,"wcaid": "2018LIYU18"
                         },{
-                          "id": "4"
-                          ,"username": "操源"
-                          ,"time": "11.90"
+                          "username": "操源"
+                          ,"single": 11.90
+                          ,"avg": 15.96
                           ,"wcaid": "2016CAOY01"
                         }, {
-                          "id": "5"
-                          ,"username": "魏庆伟"
-                          ,"time": "13.33"
+                          "username": "魏庆伟"
+                          ,"single": 13.33
+                          ,"avg": 15.98
                           ,"wcaid": "2018WEIQ01"
                         },{
-                          "id": "6"
-                          ,"username": "李一玄"
-                          ,"time": "13.55"
-                          ,"wcaid": "2019LIYI07"},  {"id": "7"
-                          ,"username": "谢迅权"
-                          ,"time": "14.26"
+                          "username": "李一玄"
+                          ,"single": 13.55
+                          ,"avg": 15.19
+                          ,"wcaid": "2019LIYI07"},  {"username": "谢迅权"
+                          ,"single": 14.26
+                          ,"avg": 24.27
                           ,"wcaid": "2018XIEX01"
                         }, {
-                          "id": "8"
-                          ,"username": "钟凯文"
-                          ,"time": "15.53"
+                          "username": "钟凯文"
+                          ,"single": 15.53
                           ,"wcaid": "2015ZHON03"},{
-                          "id": "9"
-                          ,"username": "温正烨"
-                          ,"time": "15.54"
+                          "username": "温正烨"
+                          ,"single": 15.54
+                          ,"avg": 24.01
                           ,"wcaid": "2019WENZ02"
                         }, {
-                          "id": "10"
-                          ,"username": "罗益浩"
-                          ,"time": "20.09"
+                          "username": "罗益浩"
+                          ,"single": 20.09
+                          ,"avg": 25.36
                           ,"wcaid": "2017LUOY03"
                         },
                         ]
@@ -162,50 +161,50 @@
                         ,cols: [[ //标题栏
                         {field: 'id', title: '排名', sort: true}
                           ,{field: 'username', title: '姓名'}
-                          ,{field: 'time', title: '时间'}
+                          ,{field: 'avg', title: '时间'}
                           ,{title: '操作',  toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                        , data: [{
                           "id": "1"
                           ,"username": "杨宇煌"
-                          ,"time": "5.01"
+                          ,"avg": "5.01"
                           ,"wcaid": "2017YANG16"
                         }, {
                           "id": "2"
                           ,"username": "余雷"
-                          ,"time": "7.74"
+                          ,"avg": "7.74"
                           ,"wcaid": "2015YULE01"
                         }, {"id": "3"
                           ,"username": "李宇威"
-                          ,"time": "13.05"
+                          ,"avg": "13.05"
                           ,"wcaid": "2018LIYU18"
                         },{
                           "id": "4"
                           ,"username": "李一玄"
-                          ,"time": "15.19"
+                          ,"avg": "15.19"
                           ,"wcaid": "2019LIYI07"},{
                           "id": "5"
                           ,"username": "操源"
-                          ,"time": "15.96"
+                          ,"avg": "15.96"
                           ,"wcaid": "2016CAOY01"
                         }, {
                           "id": "6"
                           ,"username": "魏庆伟"
-                          ,"time": "15.98"
+                          ,"avg": "15.98"
                           ,"wcaid": "2018WEIQ01"
                         },  {
                           "id": "7"
                           ,"username": "温正烨"
-                          ,"time": "24.01"
+                          ,"avg": "24.01"
                           ,"wcaid": "2019WENZ02"
                         }, {"id": "8"
                           ,"username": "谢迅权"
-                          ,"time": "24.27"
+                          ,"avg": "24.27"
                           ,"wcaid": "2018XIEX01"
                         }, {
                           "id": "9"
                           ,"username": "罗益浩"
-                          ,"time": "20.09"
+                          ,"avg": "20.09"
                           ,"wcaid": "2017LUOY03"
                         },
                          ]
