--- a/table/3fm.html
+++ b/table/3fm.html
@@ -63,9 +63,8 @@
                           ,{title: '操作', toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                         ,data: [{
-                          "id": "1"
-                          ,"username": "罗益浩"
-                          ,"time": "39"
+                          "username": "罗益浩"
+                          ,"single": 39
                           ,"wcaid": "2017LUOY03"
                         },
                         ]
