--- a/table/3oh.html
+++ b/table/3oh.html
@@ -59,67 +59,65 @@
                         ,cols: [[ //标题栏
                           {field: 'id', title: '排名', sort: true}
                           ,{field: 'username', title: '姓名'}
-                          ,{field: 'time', title: '时间'}
+                          ,{field: 'single', title: '时间'}
                           ,{title: '操作',  toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                         ,data: [{
-                          "id": "1"
-                          ,"username": "钟宇平"
-                          ,"time": "15.50"
+                          "username": "钟宇平"
+                          ,"single": 15.50
+                          ,"avg": 18.87
                           ,"wcaid": "2019ZHON23"
                         }, {
-                          "id": "2"
-                          ,"username": "彭伟聪"
-                          ,"time": "16.83"
+                          "username": "彭伟聪"
+                          ,"single": 16.83
+                          ,"avg": 17.81
                           ,"wcaid": "2015PENG05"
-                        }, {"id": "3"
-                          ,"username": "王华斌"
-                          ,"time": "16.91"
+                        }, {"username": "王华斌"
+                          ,"single": 16.91
+                          ,"avg": 23.76
                           ,"wcaid": "2016WANH14"
                         }, {
-                          "id": "4"
-                          ,"username": "罗绿翔"
-                          ,"time": "17.26"
+                          "username": "罗绿翔"
+                          ,"single": 17.26
+                          ,"avg": 19.90
                           ,"wcaid": "2018LUOL03"},{
-                          "id": "5"
-                          ,"username": "杨宇煌"
-                          ,"time": "18.42"
+                          "username": "杨宇煌"
+                          ,"single": 18.42
+                          ,"avg": 20.17
                           ,"wcaid": "2017YANG16"
                         }, {
-                          "id": "6"
-                          ,"username": "余雷"
-                          ,"time": "19.27"
+                          "username": "余雷"
+                          ,"single": 19.27
+                          ,"avg": 27.23
                           ,"wcaid": "2015YULE01"
-                        }, {"id": "7"
-                          ,"username": "操源"
-                          ,"time": "22.22"
+                        }, {"username": "操源"
+                          ,"single": 22.22
+                          ,"avg": 30.99
                           ,"wcaid": "2016CAOY01"
                         }, {
-                          "id": "8"
-                          ,"username": "刘斯哲"
-                          ,"time": "26.05"
+                          "username": "刘斯哲"
+                          ,"single": 26.05
+                          ,"avg": 30.93
                           ,"wcaid": "2010LIUS02"},{
-                          "id": "9"
-                          ,"username": "伍凌枫"
-                          ,"time": "27.31"
+                          "username": "伍凌枫"
+                          ,"single": 27.31
+                          ,"avg": 28.49
                           ,"wcaid": "2018WULI04"
                         }, {
-                          "id": "10"
-                          ,"username": "蔡彦"
-                          ,"time": "29.30"
+                          "username": "蔡彦"
+                          ,"single": 29.30
+                          ,"avg": 34.73
                           ,"wcaid": "2009CAIY02"
-                        }, {"id": "11"
-                          ,"username": "胡宇韬"
-                          ,"time": "30.94"
+                        }, {"username": "胡宇韬"
+                          ,"single": 30.94
                           ,"wcaid": "2018HUYU04"
                         }, {
-                          "id": "12"
-                          ,"username": "钟凯文"
-                          ,"time": "31.54"
+                          "username": "钟凯文"
+                          ,"single": 31.54
                           ,"wcaid": "2015ZHON03"},{
-                          "id": "13"
-                          ,"username": "罗佳辉"
-                          ,"time": "34.88"
+                          "username": "罗佳辉"
+                          ,"single": 34.88
+                          ,"avg": 40.08
                           ,"wcaid": "2017LUOJ03"
                         },
                         ]
@@ -175,63 +173,63 @@
                         ,cols: [[ //标题栏
                         {field: 'id', title: '排名', sort: true}
                           ,{field: 'username', title: '姓名'}
-                          ,{field: 'time', title: '时间'}
+                          ,{field: 'avg', title: '时间'}
                           ,{title: '操作',  toolbar:'#ListBar',fixed:"right",align:"center"}
                         ]]
                        , data: [{
                           "id": "1"
                           ,"username": "彭伟聪"
-                          ,"time": "17.81"
+                          ,"avg": "17.81"
                           ,"wcaid": "2015PENG05"
                         },{
                           "id": "2"
                           ,"username": "钟宇平"
-                          ,"time": "18.87"
+                          ,"avg": "18.87"
                           ,"wcaid": "2019ZHON23"
                         },{
                           "id": "3"
                           ,"username": "罗绿翔"
-                          ,"time": "19.90"
+                          ,"avg": "19.90"
                           ,"wcaid": "2018LUOL03"
                         },{
                           "id": "4"
                           ,"username": "杨宇煌"
-                          ,"time": "20.17"
+                          ,"avg": "20.17"
                           ,"wcaid": "2017YANG16"
                         },{
                           "id": "5"
                           ,"username": "王华斌"
-                          ,"time": "23.76"
+                          ,"avg": "23.76"
                           ,"wcaid": "2016WANH14"
                         },{
                           "id": "6"
                           ,"username": "余雷"
-                          ,"time": "27.23"
+                          ,"avg": "27.23"
                           ,"wcaid": "2015YULE01"
                         },{
                           "id": "7"
                           ,"username": "伍凌枫"
-                          ,"time": "28.49"
+                          ,"avg": "28.49"
                           ,"wcaid": "2018WULI04"
                         },{
                           "id": "8"
                           ,"username": "刘斯哲"
-                          ,"time": "30.93"
+                          ,"avg": "30.93"
                           ,"wcaid": "2010LIUS02"
                         },{
                           "id": "9"
                           ,"username": "操源"
-                          ,"time": "30.99"
+                          ,"avg": "30.99"
                           ,"wcaid": "2016CAOY01"
                         },{
                           "id": "10"
                           ,"username": "蔡彦"
-                          ,"time": "34.73"
+                          ,"avg": "34.73"
                           ,"wcaid": "2009CAIY02"
                         },{
                           "id": "11"
                           ,"username": "罗佳辉"
-                          ,"time": "40.08"
+                          ,"avg": "40.08"
                           ,"wcaid": "2017LUOJ03"
                         },
                          ]
